Add other things section

--- a/review_final.ipynb
+++ b/review_final.ipynb
@@ -20,7 +20,8 @@
     "- [Trees](#trees) (ch. 19)\n",
     "- [Graphs](#graphs) (ch. 20)\n",
     "- [Hashing](#hashing) (not in textbook - look at the powerpoint on eLearning)\n",
-    "- [Algorithms](#algorithms) (not really in the textbook either, but look at your discrete math notes for 3.2 and 3.3 to get the basic ideas of big O)"
+    "- [Algorithms](#algorithms) (not really in the textbook either, but look at your discrete math notes for 3.2 and 3.3 to get the basic ideas of big O)\n",
+    "- [Other Things](#other)"
    ]
   },
   {
@@ -785,6 +786,24 @@
     "When we're comparing, we only care about the most significant term. For example, if the equation that represents an algorithm's runtime is `2n^2 + 4n + 7`, the `n^2` is the only part that matters.\n",
     "\n",
     "`o(n^2)` > `o(n)`, but the `o(n)` algorithm is better because it runs faster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Other Things to Review & Focus On<a name=\"other\"></a> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- past quizzes\n",
+    "- BST traversals\n",
+    "- linked list algorithms, especially insertion\n",
+    "- finding a minimal span tree by hand (write out the list of edges!)\n",
+    "- comparing algorithms"
    ]
   },
   {
